--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.5.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "ldapjs": "^3.0.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
