--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "framer-motion": "^11.5.4",
@@ -19,12 +22,16 @@
     "jspdf": "^2.5.2",
     "ldapjs": "^3.0.7",
     "moment": "^2.30.1",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
