--- a/.env
+++ b/.env
@@ -4,5 +4,14 @@ REACT_APP_API_URL=http://localhost:5000
 
 
 
-# .env.production
-#REACT_APP_API_URL=https://your-production-url.com
+#TEST
+# LDAP_URL=ldap://172.18.162.22:389
+# BIND_DN="cn=admin,dc=pmdmc,dc=test"
+# BIND_PASSWORD="M@sunur1n"
+# BASE_DN="dc=pmdmc,dc=test"
+
+#PRODUCTION
+LDAP_URL=ldap://172.18.121.37:389
+BIND_DN="cn=admin,dc=pmdmc,dc=net"
+BIND_PASSWORD="M@sunur1nldapofPMDIT"
+BASE_DN="dc=pmdmc,dc=net"
