--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jspdf": "^2.5.2",
     "ldapjs": "^3.0.7",
     "moment": "^2.30.1",
+    "mysql": "^2.18.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
