--- a/.env
+++ b/.env
@@ -15,3 +15,8 @@ LDAP_URL=ldap://172.18.121.37:389
 BIND_DN="cn=admin,dc=pmdmc,dc=net"
 BIND_PASSWORD="M@sunur1nldapofPMDIT"
 BASE_DN="dc=pmdmc,dc=net"
+
+MYSQL_HOST=127.0.0.1
+MYSQL_USER=root
+MYSQL_PASSWORD=""
+MYSQL_DATABASE=ppi
