--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -23,6 +24,7 @@
     "jspdf": "^2.5.2",
     "ldapjs": "^3.0.7",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
