--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ LDAP_URL=ldap://172.18.121.37:389
 BIND_DN="cn=admin,dc=pmdmc,dc=net"
 BIND_PASSWORD="M@sunur1nldapofPMDIT"
 BASE_DN="dc=pmdmc,dc=net"
-GROUP_BASE_DN="ou=groups,dc=pmdmc,dc=net" 
+GROUP_BASE_DN="dc=pmdmc,dc=net"
 
 
 MYSQL_HOST=127.0.0.1
