--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
@@ -36,6 +37,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "sequelize": "^6.37.5",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
