--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^9.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "concurrently": "^9.1.0",
     "nodemon": "^3.1.4"
   }
 }
