--- a/.env
+++ b/.env
@@ -10,13 +10,14 @@ REACT_APP_API_URL=http://localhost:5000
 # BIND_PASSWORD="M@sunur1n"
 # BASE_DN="dc=pmdmc,dc=test"
 
-#PRODUCTION
+#LDAP CONNECTION
 LDAP_URL=ldap://172.18.121.37:389
 BIND_DN="cn=admin,dc=pmdmc,dc=net"
 BIND_PASSWORD="M@sunur1nldapofPMDIT"
 BASE_DN="dc=pmdmc,dc=net"
 GROUP_BASE_DN="dc=pmdmc,dc=net"
 
+#MYSQL CONNECTION
 MYSQL_HOST=127.0.0.1
 MYSQL_USER=root
 MYSQL_PASSWORD=""
