--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ BASE_DN="dc=pmdmc,dc=net"
 GROUP_BASE_DN="dc=pmdmc,dc=net"
 
 #MYSQL CONNECTION
-MYSQL_HOST=127.0.0.1
+MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=""
 MYSQL_DATABASE=ppi
