--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # .env
-# REACT_APP_API_URL=http://localhost:5000
-REACT_APP_API_URL=http://172.18.125.134:5000
+ REACT_APP_API_URL=http://localhost:5000
+ REACT_IP_ADDRESS=http://localhost
+#REACT_APP_API_URL=http://172.18.125.134:5000
 
 
 
