--- a/.env
+++ b/.env
@@ -3,8 +3,6 @@
  REACT_IP_ADDRESS=http://172.18.125.134
 #REACT_APP_API_URL=http://172.18.125.134:5000
 
-
-
 #TEST
 # LDAP_URL=ldap://172.18.162.22:389
 # BIND_DN="cn=admin,dc=pmdmc,dc=test"
@@ -21,5 +19,5 @@ GROUP_BASE_DN="dc=pmdmc,dc=net"
 #MYSQL CONNECTION
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=""
+MYSQL_PASSWORD="M@sunur1n"
 MYSQL_DATABASE=ppi
