--- a/.env
+++ b/.env
@@ -19,5 +19,5 @@ GROUP_BASE_DN="dc=pmdmc,dc=net"
 #MYSQL CONNECTION
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD="M@sunur1n"
+MYSQL_PASSWORD=""
 MYSQL_DATABASE=ppi
