--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ BIND_DN="cn=admin,dc=pmdmc,dc=net"
 BIND_PASSWORD="M@sunur1nldapofPMDIT"
 BASE_DN="dc=pmdmc,dc=net"
 GROUP_BASE_DN="dc=pmdmc,dc=net"
+LDAP_ENABLED=true
 
 #MYSQL CONNECTION
 MYSQL_HOST=localhost
