--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env
- REACT_APP_API_URL=http://localhost:5000
- REACT_IP_ADDRESS=http://localhost
+ REACT_APP_API_URL=http://172.18.125.134:5000
+ REACT_IP_ADDRESS=http://172.18.125.134
  REACT_PORT=5000
 #REACT_APP_API_URL=http://172.20.161.24:5000
 # REACT_IP_ADDRESS=http://172.18.125.134
@@ -19,7 +19,8 @@ GROUP_BASE_DN="dc=pmdmc,dc=net"
 LDAP_ENABLED=true
 
 #MYSQL CONNECTION
-MYSQL_HOST=localhost
+MYSQL_HOST=172.18.125.134
+MYSQL_PORT=3306
+MYSQL_DATABASE=ppi
 MYSQL_USER=root
 MYSQL_PASSWORD=""
-MYSQL_DATABASE=ppi
