--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 # .env
- REACT_APP_API_URL=http://172.20.161.76:5000
- REACT_IP_ADDRESS=http://172.20.161.76
+ REACT_APP_API_URL=http://172.20.161.83:5000
+ REACT_IP_ADDRESS=http://172.20.161.83
  REACT_PORT=5000
 #REACT_APP_API_URL=http://172.20.161.24:5000
-# REACT_IP_ADDRESS=http://172.20.161.76
-#TEST
+# REACT_IP_ADDRESS=http://172.20.161.83
+
+
+#TEST LDAP
 # LDAP_URL=ldap://172.18.162.22:389
 # BIND_DN="cn=admin,dc=pmdmc,dc=test"
 # BIND_PASSWORD="M@sunur1n"
@@ -19,7 +21,7 @@ GROUP_BASE_DN="dc=pmdmc,dc=net"
 LDAP_ENABLED=true
 
 #MYSQL CONNECTION
-MYSQL_HOST=172.20.161.76
+MYSQL_HOST=172.20.161.83
 MYSQL_PORT=3306
 MYSQL_DATABASE=ppi
 MYSQL_USER=root
