--- a/.env
+++ b/.env
@@ -2,15 +2,6 @@
  REACT_APP_API_URL=http://172.20.161.75:5000
  REACT_IP_ADDRESS=http://172.20.161.75
  REACT_PORT=5000
-#REACT_APP_API_URL=http://172.20.161.24:5000
-# REACT_IP_ADDRESS=http://172.20.161.75
-
-
-#TEST LDAP
-# LDAP_URL=ldap://172.18.162.22:389
-# BIND_DN="cn=admin,dc=pmdmc,dc=test"
-# BIND_PASSWORD="M@sunur1n"
-# BASE_DN="dc=pmdmc,dc=test"
 
 #LDAP CONNECTION
 LDAP_URL=ldap://172.18.121.37:389
@@ -23,6 +14,13 @@ LDAP_ENABLED=true
 #MYSQL CONNECTION
 MYSQL_HOST=172.20.161.75
 MYSQL_PORT=3306
-MYSQL_DATABASE=ppis
+MYSQL_DATABASE=ppi
 MYSQL_USER=inc_dashboard_test
 MYSQL_PASSWORD=M@sunur1n
+
+#TEST LDAP
+# LDAP_URL=ldap://172.18.162.22:389
+# BIND_DN="cn=admin,dc=pmdmc,dc=test"
+# BIND_PASSWORD="M@sunur1n"
+# BASE_DN="dc=pmdmc,dc=test"
+
