--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-icons": "^5.3.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.9.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
