--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "webrtc-adapter": "^9.0.1",
-    "workbox-webpack-plugin": "^6.4.1"
+    "workbox-webpack-plugin": "^6.4.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "concurrently \"npm run react\" \"npm run backend\"",
