--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prompts": "^2.4.2",
     "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.13.4",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
