--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "buffer": "^6.0.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "cli-progress": "^3.12.0",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
     "css-loader": "^6.5.1",
