--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "cli-progress": "^3.12.0",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
     "css-loader": "^6.5.1",
@@ -37,7 +38,7 @@
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
-    "express": "^4.21.0",
+    "express": "^4.21.2",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.12.0",
     "fs-extra": "^10.0.0",
@@ -71,6 +72,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.3",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.9.0",
@@ -95,6 +97,7 @@
   },
   "scripts": {
     "start": "concurrently \"npm run react\" \"npm run backend\"",
+    "dev": "concurrently \"npm run react\" \"npm run backend\"",
     "react": "react-app-rewired start",
     "backend": "nodemon backend/server.js",
     "build": "react-app-rewired build",
