--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@ericblade/quagga2": "^1.8.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -50,6 +51,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "jsqr": "^1.4.0",
     "ldapjs": "^3.0.7",
     "md5": "^2.3.0",
     "mini-css-extract-plugin": "^2.4.5",
