--- a/package.json
+++ b/package.json
@@ -74,11 +74,12 @@
     "react-big-calendar": "^1.13.4",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.9.0",
+    "react-to-print": "^3.0.5",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
