--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "postcss-preset-env": "^7.0.1",
     "process": "^0.11.10",
     "prompts": "^2.4.2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
+    "react-barcode": "^1.6.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.13.4",
     "react-dev-utils": "^12.0.1",
