--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "cli-progress": "^3.12.0",
+    "clipboard": "^2.0.11",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
