--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,27 +1,28 @@
 server {
-    listen 443 ssl;
-    server_name portal.pmdmc.net _;
+    listen 80;
+    server_name portal.pmdmc.net;
     
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name portal.pmdmc.net;
+
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
     location /api/ {
         proxy_pass http://inc-backend:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_cache_bypass $http_upgrade;
     }
 
     location / {
         proxy_pass http://inc-frontend:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_cache_bypass $http_upgrade;
     }
 }
