--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
+    "ua-parser-js": "^2.0.3",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
