--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@ericblade/quagga2": "^1.8.4",
+    "@hello-pangea/dnd": "^18.0.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -76,7 +77,6 @@
     "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
     "react-barcode": "^1.6.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.13.4",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
