--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-markdown": "^9.0.3",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.26.2",
