--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "mysql2": "^3.11.3",
     "openssl": "^2.0.0",
     "pagedjs": "^0.4.3",
+    "papaparse": "^5.5.3",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
