--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "postcss-preset-env": "^7.0.1",
     "process": "^0.11.10",
     "prompts": "^2.4.2",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
