--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -85,6 +86,8 @@
     "react-icons": "^5.5.0",
     "react-joyride": "^2.9.3",
     "react-markdown": "^9.0.3",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-qrcode-logo": "^3.0.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.9.0",
