--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "postcss-preset-env": "^7.0.1",
     "process": "^0.11.10",
     "prompts": "^2.4.2",
+    "qr-scanner-react": "^2.0.4",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -86,10 +87,12 @@
     "react-icons": "^5.5.0",
     "react-joyride": "^2.9.3",
     "react-markdown": "^9.0.3",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-qrcode-logo": "^3.0.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.9.0",
     "react-to-print": "^3.0.5",
     "resolve": "^1.20.0",
