--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,7 +22,7 @@ server {
 
     location / {
         proxy_pass http://inc-frontend:3000/;
-        proxy_set_header Host $host1;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
