--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name portal.pmdmc.net;
+    server_name test-portal.pmdmc.net;
     
     location / {
         return 301 https://$host$request_uri;
@@ -9,7 +9,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name portal.pmdmc.net;
+    server_name test-portal.pmdmc.net;
 
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
