--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name test-portal.pmdmc.net;
-    
+
     location / {
         return 301 https://$host$request_uri;
     }
@@ -14,14 +14,9 @@ server {
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
-    location /api/ {
-        proxy_pass http://inc-backend:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
+    # Backend API
     location / {
-        proxy_pass http://inc-frontend:3000/;
+        proxy_pass http://inc-backend:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
