--- a/nginx/default copy.conf
+++ b/nginx/default copy.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name test-portal.pmdmc.net;
-    
+
     location / {
         return 301 https://$host$request_uri;
     }
@@ -14,15 +14,10 @@ server {
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
-    location /api/ {
+    # Backend API
+    location / {
         proxy_pass http://inc-backend:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location / {
-        root /root/inc_dashboard/build;
-        index index.html;
-        try_files $uri /index.html;
     }
 }
