--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,8 +21,8 @@ server {
     }
 
     location / {
-        root /root/inc_dashboard/build;
-        index index.html;
-        try_files $uri /index.html;
+        proxy_pass http://inc-frontend:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
