--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,20 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: inc_backend
-    working_dir: /app/backend
-    volumes:
-      - .:/app
+  nginx-proxy-manager:
+    image: 'jc21/nginx-proxy-manager:latest'
+    container_name: nginx-proxy-manager
+    restart: unless-stopped
     ports:
-      - "5000:5000"
-    env_file:
-      - .env
-    command: npm start
-    networks:
-      - inc_network
-
-  frontend:
-    image: node:18
-    container_name: inc_frontend
-    working_dir: /app
+      - '80:80'    # HTTP
+      - '81:81'    # Admin UI
+      - '443:443'  # HTTPS
     volumes:
-      - .:/app
-      - /app/node_modules
-    command: npm run build && npx serve -s build
-    depends_on:
-      - backend
-    ports:
-      - "3000:3000"
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
     networks:
-      - inc_network
-
-  nginx:
-    image: nginx:alpine
-    container_name: inc_nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./build:/usr/share/nginx/html
-      - ./ssl:/etc/nginx/ssl
-    depends_on:
-      - frontend
-    networks:
-      - inc_network
+      - app-network
 
 networks:
-  inc_network:
-    driver: bridge
+  app-network:
+    external: true
