--- a/data/nginx/proxy_host/1.conf
+++ b/data/nginx/proxy_host/1.conf
@@ -9,9 +9,9 @@ map $scheme $hsts_header {
 }
 
 server {
-  set $forward_scheme https;
+  set $forward_scheme http;
   set $server         "172.18.125.134";
-  set $port           80;
+  set $port           3000;
 
   listen 80;
 listen [::]:80;
@@ -68,3 +68,4 @@ http2 off;
   # Custom
   include /data/nginx/custom/server_proxy[.]conf;
 }
+
