--- a/docker-compose.dev copy.yml
+++ b/docker-compose.dev copy.yml
@@ -12,6 +12,8 @@ services:
       - /app/node_modules
     env_file:
       - .env
+    ports:
+      - "3001:3000" # backend accessible at host:3001
     networks:
       - app-network
 
@@ -26,6 +28,8 @@ services:
       - /app/node_modules
     env_file:
       - .env
+    ports:
+      - "3000:3000" # frontend accessible at host:3000
     depends_on:
       - inc-backend
     networks:
@@ -43,9 +47,6 @@ services:
     volumes:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
-    depends_on:
-      - inc-frontend # Ensure frontend is up
-      - inc-backend  # Ensure backend is up
     networks:
       - app-network
 
