--- a/data/nginx/proxy_host/2.conf
+++ b/data/nginx/proxy_host/2.conf
@@ -10,7 +10,7 @@ map $scheme $hsts_header {
 
 server {
   set $forward_scheme http;
-  set $server         "172.18.125.134";
+  set $server         "inc-backend";
   set $port           3000;
 
   listen 80;
