--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,28 +1,44 @@
+# Serve React + proxy API to backend
+
+# (Optional) HTTP -> HTTPS redirect
 server {
     listen 80;
-    server_name test-portal.pmdmc.net;
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    server_name _;
+    return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name test-portal.pmdmc.net;
+    server_name _;
 
-    ssl_certificate /etc/nginx/certs/cert.pem;
+    # SSL certs mounted by docker-compose into /etc/nginx/certs
+    ssl_certificate     /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
-    location /api/ {
-        proxy_pass http://inc-backend:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Serve frontend (SPA)
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
-    location / {
-        proxy_pass http://inc-frontend:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+    # Proxy API requests to the backend service (service name is "backend")
+    location /api/ {
+        proxy_pass http://backend:5000/;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # WebSocket support
+        proxy_set_header Upgrade           $http_upgrade;
+        proxy_set_header Connection        "upgrade";
+
+        proxy_read_timeout 300;
+        proxy_connect_timeout 60;
+        proxy_send_timeout 300;
     }
 }
