--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,116 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "@babel/core": "^7.16.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@ericblade/quagga2": "^1.8.4",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@svgr/webpack": "^5.5.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
+    "axios": "^1.7.7",
+    "babel-jest": "^27.4.2",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "bfj": "^7.0.2",
+    "body-parser": "^1.20.3",
+    "browserslist": "^4.18.1",
+    "buffer": "^6.0.3",
+    "camelcase": "^6.2.1",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "cli-progress": "^3.12.0",
+    "clipboard": "^2.0.11",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "fs": "^0.0.1-security"
+    "crypto-browserify": "^3.12.1",
+    "crypto-js": "^4.2.0",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
+    "dotenv": "^10.0.0",
+    "dotenv-expand": "^5.1.0",
+    "eslint": "^8.3.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-webpack-plugin": "^3.1.1",
+    "express": "^4.21.2",
+    "file-loader": "^6.2.0",
+    "framer-motion": "^11.12.0",
+    "fs-extra": "^10.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.3",
+    "jest-resolve": "^27.4.2",
+    "jest-watch-typeahead": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
+    "jsqr": "^1.4.0",
+    "ldapjs": "^3.0.7",
+    "lucide-react": "^0.503.0",
+    "md5": "^2.3.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
+    "openssl": "^2.0.0",
+    "pagedjs": "^0.4.3",
+    "papaparse": "^5.5.3",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.0.1",
+    "process": "^0.11.10",
+    "prompts": "^2.4.2",
+    "qr-scanner-react": "^2.0.4",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
+    "react": "^18.3.1",
+    "react-app-polyfill": "^3.0.0",
+    "react-barcode": "^1.6.1",
+    "react-big-calendar": "^1.13.4",
+    "react-dev-utils": "^12.0.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
+    "react-markdown": "^9.0.3",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-qrcode-logo": "^3.0.0",
+    "react-refresh": "^0.11.0",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.9.0",
+    "react-to-print": "^3.0.5",
+    "resolve": "^1.20.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.3.0",
+    "semver": "^7.3.5",
+    "sequelize": "^6.37.5",
+    "source-map-loader": "^3.0.0",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.2",
+    "terser-webpack-plugin": "^5.2.5",
+    "ua-parser-js": "^2.0.3",
+    "util": "^0.12.5",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.64.4",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "webrtc-adapter": "^9.0.1",
+    "workbox-webpack-plugin": "^6.4.1",
+    "xlsx": "^0.18.5"
   }
 }
