--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,8 @@
-# Serve React + proxy API to backend
-
-# (Optional) HTTP -> HTTPS redirect
+# Redirect HTTP -> HTTPS
 server {
     listen 80;
     server_name _;
+
     return 301 https://$host$request_uri;
 }
 
@@ -11,21 +10,25 @@ server {
     listen 443 ssl;
     server_name _;
 
-    # SSL certs mounted by docker-compose into /etc/nginx/certs
     ssl_certificate     /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    # Serve frontend (SPA)
+    # Serve React SPA
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to the backend service (service name is "backend")
+    # Proxy API requests to backend container
     location /api/ {
-        proxy_pass http://backend:5000/;
+        # FIX: Use the Docker service name 'backend'
+        proxy_pass http://backend:80/;
+
+        # Remove /api prefix before sending to backend
+        rewrite ^/api/(.*)$ /$1 break;
+
         proxy_http_version 1.1;
 
         proxy_set_header Host              $host;
