--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,34 +1,20 @@
 # Stage 1: Build React app
+# Use a specific Node.js version to ensure consistent builds
 FROM node:18 as build
 
+# Set the working directory for the application
 WORKDIR /app
 
-# Copy package manifest first
+# Copy the package manifest files first to leverage Docker's cache
+# This means npm install only runs when package.json changes
 COPY package*.json ./
 
-# Install dependencies
-# RUN npm ci
+# Install project dependencies
 RUN npm install
 
-# Copy all frontend source
+# Copy the entire source code for the build
 COPY . .
 
-# Build production-ready React app
+# Run the build script defined in your package.json
+# This will generate the production-ready static files
 RUN npm run build
-
-# Stage 2: Serve frontend with Nginx
-FROM nginx:alpine
-
-# Clean default html
-RUN rm -rf /usr/share/nginx/html/*
-
-# Copy React build
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Copy custom nginx config (we also mount it via compose so this is a fallback)
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-EXPOSE 443
-
-CMD ["nginx", "-g", "daemon off;"]
