--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,59 @@
-version: "3.8"
-
+version: "3.9"
 services:
   backend:
     build:
-      context: .
-      dockerfile: Dockerfile.backend
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: inc_backend
-    restart: always
-    working_dir: /usr/src/app
+    env_file: .env
+    environment:
+      - MYSQL_HOST=db
+      # - LDAP_URL=ldap://host.docker.internal:389
     volumes:
       - ./backend:/usr/src/app
       - /usr/src/app/node_modules
-      - ./nginx/certs:/usr/src/app/nginx/certs:ro
     ports:
-      - "5000:80"
-    env_file:
-      - .env.docker
-    depends_on:
-      - db
+      - "5000:5000"
     networks:
-      - incnet
-    entrypoint: ["/usr/src/app/entrypoint.sh"]
+      - inc_network
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: always
 
   frontend:
     build:
       context: .
       dockerfile: Dockerfile.frontend
     container_name: inc_frontend
-    restart: always
+    command: sh -c "cp -r /app/build/* /frontend_build && tail -f /dev/null"
+    volumes:
+      - ./build:/frontend_build
+    networks:
+      - inc_network
+    depends_on:
+      - backend
+    restart: "no"
+
+  nginx:
+    image: nginx:alpine
+    container_name: inc_nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/certs:/etc/nginx/certs:ro
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/certs:/etc/nginx/certs
+      - ./build:/usr/share/nginx/html
     depends_on:
       - backend
+      - frontend
     networks:
-      - incnet
+      - inc_network
+    restart: always
 
   db:
-    image: mysql:5.7
+    image: mysql:8.0
     container_name: inc_mysql
     restart: always
     environment:
@@ -48,16 +61,38 @@ services:
       MYSQL_DATABASE: ppi
       MYSQL_USER: portal_dev
       MYSQL_PASSWORD: M@sunur1n
-    command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u $$MYSQL_USER --password=$$MYSQL_PASSWORD"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    ports:
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./db/init:/docker-entrypoint-initdb.d
+    command: --default-authentication-plugin=mysql_native_password
     networks:
-      - incnet
+      - inc_network
 
-networks:
-  incnet:
-    driver: bridge
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: inc_phpmyadmin
+    restart: always
+    environment:
+      PMA_HOST: db
+      PMA_USER: portal_dev
+      PMA_PASSWORD: M@sunur1n
+    ports:
+      - "8081:80"
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - inc_network
 
 volumes:
   db_data:
+
+networks:
+  inc_network:
+    driver: bridge
