--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,27 +1,47 @@
+# Redirect HTTP -> HTTPS
 server {
- listen 80;
- listen 443 ssl;
+    listen 80;
+    server_name _;
 
- server_name localhost;
+    return 301 https://$host$request_uri;
+}
 
- # SSL certs (mounted from ./nginx/certs)
- ssl_certificate   /etc/nginx/certs/cert.pem;
- ssl_certificate_key /etc/nginx/certs/key.pem;
+server {
+    listen 443 ssl;
+    server_name _;
 
- # Serve React frontend
- location / {
-  root /usr/share/nginx/html;
-  index index.html index.htm;
-  try_files $uri /index.html;
- }
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
 
- # Proxy API requests to backend
- location /api/ {
-  proxy_pass http://backend:5000/;
-  proxy_http_version 1.1;
-  proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection 'upgrade';
-  proxy_set_header Host $host;
-  proxy_cache_bypass $http_upgrade;
- }
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Serve React SPA
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Proxy API requests to backend container
+    location /api/ {
+        # FIX: Use the Docker service name 'backend'
+        proxy_pass http://backend:80/;
+
+        # Remove /api prefix before sending to backend
+        rewrite ^/api/(.*)$ /$1 break;
+
+        proxy_http_version 1.1;
+
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # WebSocket support
+        proxy_set_header Upgrade           $http_upgrade;
+        proxy_set_header Connection        "upgrade";
+
+        proxy_read_timeout 300;
+        proxy_connect_timeout 60;
+        proxy_send_timeout 300;
+    }
 }
