--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html-webpack-plugin": "^5.5.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
+    "https-browserify": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
@@ -96,6 +97,7 @@
     "react-select": "^5.9.0",
     "react-to-print": "^3.0.5",
     "recharts": "^3.4.1",
+    "redis": "^5.9.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
@@ -107,6 +109,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "ua-parser-js": "^2.0.3",
+    "use-debounce": "^10.0.6",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
