--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
     container_name: inc_backend
     env_file:
       - .env
-      - .env.docker
     environment:
       - PORT=80
       - REDIS_HOST=redis
+      - MYSQL_HOST=db
+      - REACT_PORT_HTTP=80
     volumes:
       - ./backend/uploads:/usr/src/app/uploads
     ports:
@@ -26,6 +27,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.frontend
+      args:
+        ENV_FILE: .env
     container_name: inc_frontend
     command: sh -c "cp -r /app/build/* /frontend_build && tail -f /dev/null"
     volumes:
@@ -43,7 +46,7 @@ services:
       - "8081:80"
       - "8444:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/local.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/certs:/etc/nginx/certs
       - ./build:/usr/share/nginx/html
     depends_on:
@@ -59,7 +62,6 @@ services:
     restart: always
     env_file:
       - .env
-      - .env.docker
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
     healthcheck:
@@ -91,7 +93,6 @@ services:
     restart: always
     env_file:
       - .env
-      - .env.docker
     environment:
       # Explicitly set PMA_HOST to inc_mysql or db
       - PMA_HOST=db
