--- a/.env.docker
+++ b/.env.docker
@@ -30,9 +30,9 @@ HTTPS=true
 SSL_CRT_FILE=./cert.pem
 SSL_KEY_FILE=./key.pem
 
-#MYSQL CONNECTION
+#MYSQL TEST CONNECTION
 MYSQL_HOST=172.18.121.20
 MYSQL_PORT=3306
 MYSQL_DATABASE=portal-test-server
 MYSQL_USER=portal-test-server
-MYSQL_PASSWORD=M@sunur1n portal test server
+MYSQL_PASSWORD="M@sunur1n portal test server"
