--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name test-portal.pmdmc.net 172.18.121.18 localhost;
+    server_name _;
 
     # Serve React frontend
     location / {
