--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,20 +9,13 @@ services:
     env_file:
       - .env.docker
     environment:
-      - PORT=80
-      - REDIS_HOST=redis
+      - PORT=5000
+      - REDIS_HOST=172.18.121.72
     volumes:
       - ./backend/uploads:/usr/src/app/uploads
-      # Idagdag ang linyang ito para makita ng Docker ang certs mo:
       - ./nginx/certs/cert.pem:/usr/src/app/cert.pem
       - ./nginx/certs/key.pem:/usr/src/app/key.pem
-    expose:
-      - "80"
-    networks:
-      - inc_prod_network
-    extra_hosts:
-      - "ldap.pmdmc.net:172.18.121.37"
-      - "host.docker.internal:host-gateway"
+    network_mode: "host"
     depends_on:
       - redis
     restart: always
@@ -34,7 +27,6 @@ services:
       args:
         ENV_FILE: .env.docker
     container_name: inc_frontend_prod
-    # Kinokopya ang build files sa shared volume para sa Nginx
     command: sh -c "cp -r /app/build/* /frontend_build && tail -f /dev/null"
     volumes:
       - frontend_build:/frontend_build
@@ -47,9 +39,11 @@ services:
     container_name: inc_nginx_prod
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf
       - frontend_build:/usr/share/nginx/html
+      - ./nginx/certs:/etc/nginx/certs
     depends_on:
       - backend
       - frontend
@@ -61,8 +55,8 @@ services:
     image: redis:alpine
     container_name: inc_redis_prod
     restart: always
-    expose:
-      - "6379"
+    ports:
+      - "6380:6379"
     networks:
       - inc_prod_network
 
