--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -11,7 +11,7 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://backend:80;
+        proxy_pass http://172.18.121.72:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -26,7 +26,7 @@ server {
 
     # Proxy LDAP requests
     location /ldap/ {
-        proxy_pass http://backend:80/ldap/;
+        proxy_pass http://172.18.121.72:5000/ldap/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -35,7 +35,7 @@ server {
 
     # Proxy Uploads
     location /uploads/ {
-        proxy_pass http://backend:80/uploads/;
+        proxy_pass http://172.18.121.72:5000/uploads/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
     }
