--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,8 +7,10 @@ services:
     env_file:
       - .env.docker
     environment:
-      - PORT=5000
-      - REDIS_HOST=172.18.121.72
+      - REACT_PORT_HTTP=5000
+      - REACT_PORT_HTTPS=5443
+      - REDIS_HOST=172.18.121.18
+      - REDIS_PORT=6380
     volumes:
       - ./backend/uploads:/usr/src/app/uploads
       - ./nginx/certs/cert.pem:/usr/src/app/cert.pem
@@ -25,29 +27,10 @@ services:
       args:
         ENV_FILE: .env.docker
     container_name: inc_frontend_prod
-    command: sh -c "cp -r /app/build/* /frontend_build && tail -f /dev/null"
+    command: sh -c "mkdir -p /var/www/html && cp -r /app/build/* /var/www/html/ && tail -f /dev/null"
     volumes:
-      - frontend_build:/frontend_build
-    networks:
-      - inc_prod_network
+      - /var/www/html:/var/www/html
     restart: "no"
-
-  nginx:
-    image: nginx:alpine
-    container_name: inc_nginx_prod
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf
-      - frontend_build:/usr/share/nginx/html
-      - ./nginx/certs:/etc/nginx/certs
-    depends_on:
-      - backend
-      - frontend
-    networks:
-      - inc_prod_network
-    restart: always
 
   redis:
     image: redis:alpine
@@ -55,13 +38,3 @@ services:
     restart: always
     ports:
       - "6380:6379"
-    networks:
-      - inc_prod_network
-
-volumes:
-  frontend_build:
-
-
-networks:
-  inc_prod_network:
-    driver: bridge
