--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,15 +7,19 @@ services:
     env_file:
       - .env.docker
     environment:
-      - REACT_PORT_HTTP=5000
-      - REACT_PORT_HTTPS=5443
-      - REDIS_HOST=172.18.121.18
-      - REDIS_PORT=6380
+      - REACT_PORT_HTTP=80
+      - REACT_PORT_HTTPS=443
+      - REDIS_HOST=redis
     volumes:
       - ./backend/uploads:/usr/src/app/uploads
       - ./nginx/certs/cert.pem:/usr/src/app/cert.pem
       - ./nginx/certs/key.pem:/usr/src/app/key.pem
-    network_mode: "host"
+    expose:
+      - "80"
+    networks:
+      - inc_prod_network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - redis
     restart: always
@@ -27,14 +31,43 @@ services:
       args:
         ENV_FILE: .env.docker
     container_name: inc_frontend_prod
-    command: sh -c "mkdir -p /var/www/html && cp -r /app/build/* /var/www/html/ && tail -f /dev/null"
+    command: sh -c "cp -r /app/build/* /frontend_build && tail -f /dev/null"
     volumes:
-      - /var/www/html:/var/www/html
+      - frontend_build:/frontend_build
+    networks:
+      - inc_prod_network
     restart: "no"
+
+  nginx:
+    image: nginx:alpine
+    container_name: inc_nginx_prod
+    ports:
+      - "8080:80"
+      - "8443:443"
+    volumes:
+      - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf
+      - frontend_build:/usr/share/nginx/html
+      - ./nginx/certs:/etc/nginx/certs
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - inc_prod_network
+    restart: always
 
   redis:
     image: redis:alpine
     container_name: inc_redis_prod
     restart: always
-    ports:
-      - "6380:6379"
+    expose:
+      - "6379"
+    networks:
+      - inc_prod_network
+
+volumes:
+  frontend_build:
+
+
+networks:
+  inc_prod_network:
+    driver: bridge
