--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,6 +20,7 @@ services:
       - inc_prod_network
     extra_hosts:
       - "host.docker.internal:host-gateway"
+      - "incdirectory.pmdmc.net:172.18.100.103"
     depends_on:
       - redis
     restart: always
