--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "express": "^4.22.1",
+    "face-api.js": "^0.22.2",
     "file-loader": "^6.2.0",
     "framer-motion": "^11.12.0",
     "fs-extra": "^10.0.0",
