--- a/.env.docker
+++ b/.env.docker
@@ -36,3 +36,6 @@ MYSQL_PORT=3306
 MYSQL_DATABASE=portal-test-server
 MYSQL_USER=portal-test-server
 MYSQL_PASSWORD="M@sunur1n portal test server"
+
+# SEARCH INTEGRATION
+ELASTICSEARCH_NODE=http://inc_elasticsearch:9200
